--- a/PSA/docker-compose.yml
+++ b/PSA/docker-compose.yml
@@ -9,13 +9,13 @@ services:
     ports:
       - 27117:27017
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
   router02:
     image: mongo:6.0.1
     container_name: router-02
     command: mongos --port 27017 --configdb rs-config-server/configsvr01:27017,configsvr02:27017,configsvr03:27017 --bind_ip_all
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27118:27017
     links:
@@ -27,7 +27,7 @@ services:
     container_name: mongo-config-01 
     command: mongod --port 27017 --configsvr --replSet rs-config-server
     volumes:
-      - ./scripts:/scripts 
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27119:27017
     links:
@@ -39,7 +39,7 @@ services:
     container_name: mongo-config-02 
     command: mongod --port 27017 --configsvr --replSet rs-config-server
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27120:27017
     links:
@@ -49,7 +49,7 @@ services:
     container_name: mongo-config-03 
     command: mongod --port 27017 --configsvr --replSet rs-config-server
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27121:27017
     links:
@@ -62,7 +62,7 @@ services:
     container_name: shard-01-node-x
     command: mongod --port 27017 --shardsvr --replSet rs-shard-01
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27122:27017
     links:
@@ -73,7 +73,7 @@ services:
     container_name: shard-01-node-a
     command: mongod --port 27017 --shardsvr --replSet rs-shard-01
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27123:27017
   shard01-b:
@@ -81,7 +81,7 @@ services:
     container_name: shard-01-node-b
     command: mongod --port 27017 --shardsvr --replSet rs-shard-01
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27124:27017
 
@@ -91,7 +91,7 @@ services:
     container_name: shard-02-node-x
     command: mongod --port 27017 --shardsvr --replSet rs-shard-02
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27125:27017
     links:
@@ -102,7 +102,7 @@ services:
     container_name: shard-02-node-a
     command: mongod --port 27017 --shardsvr --replSet rs-shard-02
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27126:27017
   shard02-b:
@@ -110,7 +110,7 @@ services:
     container_name: shard-02-node-b
     command: mongod --port 27017 --shardsvr --replSet rs-shard-02
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27127:27017
 
@@ -120,7 +120,7 @@ services:
     container_name: shard-03-node-x
     command: mongod --port 27017 --shardsvr --replSet rs-shard-03
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27128:27017
     links:
@@ -131,7 +131,7 @@ services:
     container_name: shard-03-node-a
     command: mongod --port 27017 --shardsvr --replSet rs-shard-03
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27129:27017
   shard03-b:
@@ -139,7 +139,7 @@ services:
     container_name: shard-03-node-b
     command: mongod --port 27017 --shardsvr --replSet rs-shard-03
     volumes:
-      - ./scripts:/scripts
+      - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
     ports:
       - 27130:27017
 
