--- a/PSA/docker-compose.yml
+++ b/PSA/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   router01:
     image: mongo:3.4.24
     container_name: router-01
-    command: mongos --port 27017 --configdb rs-config-server/configsvr01:27017,configsvr02:27017,configsvr03:27017 --bind_ip_all
+    command: mongos --port 27017 --configdb rs-config-server/configsvr01:27017,configsvr02:27017,configsvr03:27017 --bind_ip 0.0.0.0
     ports:
       - 27217:27017
     volumes:
@@ -14,7 +14,7 @@ services:
   router02:
     image: mongo:3.4.24
     container_name: router-02
-    command: mongos --port 27017 --configdb rs-config-server/configsvr01:27017,configsvr02:27017,configsvr03:27017 --bind_ip_all
+    command: mongos --port 27017 --configdb rs-config-server/configsvr01:27017,configsvr02:27017,configsvr03:27017 --bind_ip 0.0.0.0
     volumes:
       - /docker_qas_nfs/mongodb_cluster/mongodb-cluster-docker-compose/PSA/scripts:/scripts
       - /docker_qas_nfs/mongodb_cluster/shards/router02/data:/data
